--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,14 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 @import "tailwindcss";
 
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+*::-webkit-scrollbar {
+  display: none;
+}
+
 @theme {
 	/* 커스텀 브레이크포인트 */
 	--breakpoint-narrow: 90rem;
