fix: uxui 로 매핑 값 통일

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -133,7 +133,7 @@ button {
 	/* Category Colors */
 	--color-category-frontend: #26c7ef;
 	--color-category-backend: #12a849;
-	--color-category-uiux: #f45e8f;
+	--color-category-uxui: #f45e8f;
 	--color-category-ai: #ae77fa;
 	--color-category-cloud: #37ade9;
 	--color-category-data: #26cdae;
